# FAsteroids

./: CMakeLists.txt  LICENSE  README.md
src/: AppState.h  Asteroids.cpp  Asteroids.h  Render.cpp  Render.h  Settings.h  System.cpp  System.h  Utils.h  main.cpp
src/functional/: GenerateView.h  MovableBox.h
src/game/: Collisions.cpp  Collisions.h  GameLogic.cpp  GameLogic.h  GameState.h
src/menu/: MenuLogic.cpp  MenuLogic.h  MenuState.h
